purchase options and utility nav edit

--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -3,6 +3,7 @@ layout: default
 page-type: page
 title: StoneAge Waterblast and Sewer Product Catalogs 
 permalink: /product-catalogs
+master-slider: yes
 ---
 
 <div class="fluid-container landing-nav">
@@ -20,9 +21,11 @@ permalink: /product-catalogs
       </div>
       <div class="col-sm-8">
         <h3>2017/18 Waterblast Tools</h3>
-        <p><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2017-18 StoneAge Waterblast Tools Catalog">Click here to download the complete Waterblast Tools Catalog</a> » PDF 14 MB</p>
         <p>
-          <a href="/assets/pdf/catalogs/waterblast_2017_sp/2017_waterblast_catalog_spanish.pdf" target="_blank"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_de/2017_waterblast_catalog_de.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_fr/2017_waterblast_catalog_french.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_pt/2017_waterblast_catalog_portuguese.pdf" target="_blank"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" title="Portuguese" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_nl/2017_waterblast_catalog_dutch.pdf" target="_blank"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:32px;" /></a>
+          <a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR.pdf" target="_blank" title="2017-18 StoneAge Waterblast Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Waterblast Tools Catalog</a><br/>
+          <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
+        <p>
+          <a href="/assets/pdf/catalogs/waterblast_2017_sp/2017_waterblast_catalog_spanish.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_de/2017_waterblast_catalog_de.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_fr/2017_waterblast_catalog_french.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_pt/2017_waterblast_catalog_portuguese.pdf" target="_blank" data-toggle="tooltip" title="Portuguese"><img src="/assets/img/icon-Brazil-flag.png" alt="Portuguese" title="Portuguese" style="width:32px;" /></a> &nbsp;<a href="/assets/pdf/catalogs/waterblast_2017_nl/2017_waterblast_catalog_dutch.pdf" target="_blank" data-toggle="tooltip" title="Dutch"><img src="/assets/img/icon-Dutch-flag.png" alt="Dutch" title="Dutch" style="width:32px;" /></a>
         </p>
       </div>
     </div>
@@ -309,12 +312,13 @@ permalink: /product-catalogs
         <a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2017-18 StoneAge Warthog Sewer Tools Catalog"><img src="assets/img/catalog_cover_sewer_2018-19.jpg" class="img-responsive" alt="2018-19 StoneAge Warthog Sewer Tools Catalog"></a>
       </div>
       <div class="col-sm-8">
-        <h3>2018/19 Sewer Nozzles</h3>
-        <p><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2018-19 StoneAge Warthog Sewer Tools Catalog">Click here to download the complete 2018/19 Sewer Nozzles Catalog</a> » PDF 9.1 MB</p>
+        <h3>2018/19 Sewer Tools</h3>
+        <p><a href="assets/pdf/catalogs/sewer_2018/2018_warthog_catalog_web_final.pdf" target="_blank" title="2018-19 StoneAge Warthog Sewer Tools Catalog"><i class="fa fa-download" aria-hidden="true"></i> Download the Sewer Tools Catalog</a><br/>
+          <a href="/request-catalog"><i class="fa fa-book" aria-hidden="true"></i> Request a printed copy</a></p>
         <p>
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;
-          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a>
+          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_SP_web.pdf" target="_blank" data-toggle="tooltip" title="Spanish"><img src="/assets/img/icon-Spanish-flag.png" alt="Spanish" title="Spanish" style="width:32px;" /></a> &nbsp;
+          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_004_GER_A4_LR.pdf" target="_blank" data-toggle="tooltip" title="German"><img src="/assets/img/icon-Germany-flag.png" alt="German" title="German" style="width:32px;" /></a> &nbsp;
+          <a href="/assets/pdf/catalogs/sewer_2017/2017_warthog_catalog_FR_web.pdf" target="_blank" data-toggle="tooltip" title="French"><img src="/assets/img/icon-France-flag.png" alt="French" title="French" style="width:32px;" /></a>
         </p>
       </div>
     </div>
