--- a/waterblast-automation/autopack-lwp.html
+++ b/waterblast-automation/autopack-lwp.html
@@ -46,7 +46,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>AutoPack-LPW</h1>
+        <h1>AutoPack-LWP</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
