--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -121,20 +121,43 @@ master-slider: yes
               <td colspan="2">4–24 minutes</td>
             </tr>
             <tr>
-              <th>Inlet Connection</th>
-              <td colspan="2">3/4 NPT, 1 NPT, 3/4 MP, 1 MP, M24</td>
-            </tr>
-            <tr>
               <th>Rotation Speed</th>
               <td colspan="2">Adjustable</td>
             </tr>
             <tr>
-              <th>Weight</th>
+              <th>Inlet Connection</th>
+              <td colspan="2">3/4 NPT, 1 NPT, 3/4 MP, 1 MP, M24</td>
+            </tr>
+            <tr>
+              <th>Manifold Port Size</th>
+              <td colspan="2">G12</td>
+            </tr>
+            <tr>
+              <th>Port Size</th>
+              <td colspan="2">1/4 NPT (P4)</td>
+            </tr>
+            <tr>
+              <th>Nozzle Type</th>
+              <td colspan="2">OCV Carbide</td>
+            </tr>
+            <tr>
+              <th>Diameter</th>
+              <td>5.12 in.</td>
+              <td><span class="metric">130 mm</span></td>
+            </tr>
+            <tr>
+              <th>Length</th>
+              <td>17 in.</td>
+              <td><span class="metric">432 mm</span></td>
+            </tr>
+            <tr>
+              <th>Weight*</th>
               <td>35 lb</td>
               <td><span class="metric">16 kg</span></td>
             </tr>
           </tbody>
           </table>
+          <p class="small">*Includes manifold, 6-inch nipples, and pulling ring</p>
         </div>
 <!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
@@ -160,15 +183,15 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/TR-130_Manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Manual</a></li>
-            <li><a href="/assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Fastener Assembly Instructions</a></li>
+            <li><a href="/assets/pdf/manuals/TR-130_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/TR-130_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-130 Fastener Assembly Instructions</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
             <li><a href="/assets/pdf/data-sheets/TR-130_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-130 Data Sheet</a></li>
-            <li><a href="/assets/pdf/tool-talks/TR-130_tool_talk.pdf"><i class="fa fa-file-text-o"></i> &nbsp;TR-130 Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/TR-130_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-130 Tool Talk</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
