--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -107,24 +107,51 @@ master-slider: yes
               <td><span class="metric">190–830 l/min</span></td>
             </tr>
             <tr>
-              <th>Cycle Time</th>
-              <td colspan="2">10–88 minutes</td>
+              <th>Power Range</th>
+              <td colspan="2">30–1900 hp</td>
             </tr>
             <tr>
-              <th>Inlet Connection</th>
-              <td colspan="2">P16 (up to 12k psi MAWP)<br>M16 (up to 15k psi MAWP)</td>
+              <th>Cycle Time</th>
+              <td colspan="2">10–88 minutes</td>
             </tr>
             <tr>
               <th>Rotation Speed</th>
               <td colspan="2">Adjustable</td>
             </tr>
             <tr>
-              <th>Weight</th>
+              <th>Inlet Connection</th>
+              <td colspan="2">P16 (up to 10k psi MAWP)<br>M16 (up to 15k psi MAWP)</td>
+            </tr>
+            <tr>
+              <th>Manifold Port Size</th>
+              <td colspan="2">G16</td>
+            </tr>
+            <tr>
+              <th>Port Size</th>
+              <td colspan="2">3/4 NPT (P12)</td>
+            </tr>
+            <tr>
+              <th>Nozzle Type</th>
+              <td colspan="2">OC8</td>
+            </tr>
+            <tr>
+              <th>Diameter</th>
+              <td>8 in.</td>
+              <td><span class="metric">200 mm</span></td>
+            </tr>
+            <tr>
+              <th>Length</th>
+              <td>22.8 in.</td>
+              <td><span class="metric">579 mm</span></td>
+            </tr>
+            <tr>
+              <th>Weight*</th>
               <td>100 lb</td>
               <td><span class="metric">45 kg</span></td>
             </tr>
           </tbody>
           </table>
+          <p class="small">*Includes manifold, 8-inch nipples, and pulling ring</p>
         </div>
 <!--
         <aside class="col-sm-3 col-sm-offset-4 aside-box">
@@ -150,15 +177,15 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/TR-200_Manual.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Manual</a></li>
-            <li><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Fastener Assembly Instructions</a></li>
+            <li><a href="/assets/pdf/manuals/TR-200_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Manual</a></li>
+            <li><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Torus TR-200 Fastener Assembly Instructions</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
             <li><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-200 Data Sheet</a></li>
-            <li><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf"><i class="fa fa-file-text-o"></i> &nbsp;TR-200 Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;TR-200 Tool Talk</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
