--- a/rentals.html
+++ b/rentals.html
@@ -12,60 +12,53 @@ master-slider: yes
   </div>
 </div>
 
-<section class="fluid-container bg-lt-gray margin-top-30">
+<!-- Contact Info -->
+<section class="fluid-container padding-tb-30">
   <div class="container">
-    <div class="col-sm-4 padding-tb-30">
-      <h2 style="color: #9e6033; font-size:460%; letter-spacing:2px;">Available</h2>
-      <h2 style="color: #9e6033; font-size:910%; letter-spacing:2px; font-weight: 800; line-height:80%;">Now</h2>
-      <h2>in our regional rental fleets</h2>
+    <h2 class="slab bold spaced margin-bottom-30" style="font-size:30px;">Contact a rental facility near you</h2>
+    <div class="row">
+      <div class="col-sm-4">
+        <h5 class="bold slab" style="text-transform:uppercase;">Houston Area</h5>
+        <p><strong>StoneAge Houston</strong><br>
+          Pasadena, TX<br>
+          +1 (281) 888-5069<br>
+          <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-4">
+        <h5 class="bold slab" style="text-transform:uppercase;">Louisiana</h5>
+        <p><strong>StoneAge Louisiana</strong><br>
+          Geismar, LA<br>
+          +1 (225) 508-3520<br>
+          <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
+      </div>
+      <div class="col-sm-4">
+        <h5 class="bold slab" style="text-transform:uppercase;">Ohio</h5>
+        <p><strong>StoneAge Ohio</strong><br>
+          North Royalton, OH<br>
+          +1 (440) 230-8080<br>
+          <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
+      </div>
     </div>
-    <div class="col-sm-8" >
-      <div id="rentalsCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#rentalsCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="1"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="2"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="3"></li>
-          <li data-target="#rentalsCarousel" data-slide-to="4"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="/assets/img/for_rentals_abx-3l_01.jpg" alt="AutoBox ABX-3L">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_abx-pro_01.jpg" alt="AutoBox ABX-PRO">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_skr_01.jpg" alt="Striker surface prep">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_abx-500_01.jpg" alt="AutoBox ABX-500">
-          </div>
-
-          <div class="item">
-            <img src="/assets/img/for_rentals_bc_01.jpg" alt="Rotary tools for surface prep">
-          </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#rentalsCarousel" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#rentalsCarousel" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div><!-- end Carousel -->
+    <div class="row">
+      <div class="col-sm-4">
+        <h5 class="bold slab" style="text-transform:uppercase;">Australia</h5>
+        <p><strong>WOMA Australia</strong><br>
+          08 9434 6622 | Henderson, Perth, WA<br>
+          02 4648 2311 | Smeaton Grange, NSW<br>
+          07 5479 3112 | Queensland<br>
+        <a href="http://www.woma.com.au/" target="_blank">www.woma.com.au</a></p>
+      </div>
+      <div class="col-sm-4">
+        <h5 class="bold slab" style="text-transform:uppercase;">Canada</h5>
+        <p><strong>Joe Johnson Equipment</strong><br>
+          1 (800) 263-1262 | Edmonton, AB<br>
+          1 (800) 263-1262 | Innisfil, ON<br>
+        <a href="http://www.jjei.com/" target="_blank">www.jjei.com</a></p>
+      </div>
     </div>
   </div>
 </section>
+<!-- End Contact Info -->
 
 <!-- Demo Trailer -->
 <section class="fluid-container bg-lt-grey">
@@ -88,44 +81,6 @@ master-slider: yes
   </div>
 </section>
 <!-- End Demo Trailer -->
-
-<!-- Contact Info -->
-<section class="fluid-container padding-tb-30">
-  <div class="container">
-    <h2 class="slab bold spaced margin-bottom-30" style="font-size:30px;">Contact a rental facility near you</h2>
-    <div class="row">
-      <div class="col-sm-3">
-        <h5 class="bold slab" style="text-transform:uppercase;">Houston Area</h5>
-        <p><strong>StoneAge Houston</strong><br>
-          Pasadena, TX<br>
-          +1 (281) 888-5069<br>
-          <a href="mailto:sales-tx@stoneagetools.com">sales-tx@stoneagetools.com</a></p>
-      </div>
-      <div class="col-sm-3">
-        <h5 class="bold slab" style="text-transform:uppercase;">Louisiana</h5>
-        <p><strong>StoneAge Louisiana</strong><br>
-          Geismar, LA<br>
-          +1 (225) 508-3520<br>
-          <a href="mailto:sales-la@stoneagetools.com">sales-la@stoneagetools.com</a></p>
-      </div>
-      <div class="col-sm-3">
-        <h5 class="bold slab" style="text-transform:uppercase;">Ohio</h5>
-        <p><strong>StoneAge Ohio</strong><br>
-          North Royalton, OH<br>
-          +1 (440) 230-8080<br>
-          <a href="mailto:sales-oh@stoneagetools.com">sales-oh@stoneagetools.com</a></p>
-      </div>
-      <div class="col-sm-3">
-        <h5 class="bold slab" style="text-transform:uppercase;">Canada</h5>
-        <p><strong>Joe Johnson Equipment</strong><br>
-        +1 (780) 469-1584 | Edmonton, AB<br>
-          +1 (705) 733-7700 | Innisfil, ON<br>
-        <a href="http://www.jjei.com/">www.jjei.com</a></p>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End Contact Info -->
 
 <section class="fluid-container padding-tb-60 margin-bottom-30 rental-questions">
   <div class="container">
@@ -369,11 +324,11 @@ master-slider: yes
               <div class="panel-body">
                 <p>Yes, our purchase option provides an easy way to reduce overall capital investment when you want to add rented equipment to your fleet. You can receive credit equal to:
                 <ul>
-                  <li>90% of the paid rentals for a one-month rental</li>
-                  <li>80% of the paid rentals for a two-month rental</li>
-                  <li>70% of the paid rentals for a three-month rental</li>
-                  <li>60% of the paid rentals for a four-month rental</li>
-                  <li>50% of the paid rentals for rentals of five months or longer</li>
+                  <li>100% of the paid rentals for a one-month rental</li>
+                  <li>90% of the paid rentals for a two-month rental</li>
+                  <li>80% of the paid rentals for a three-month rental</li>
+                  <li>70% of the paid rentals for a four-month rental</li>
+                  <li>60% of the paid rentals for rentals of five months or longer</li>
                 </ul>
                 <p><a href="/assets/pdf/reference/rental_purchase_option_policy.pdf" target="_blank">Download the Purchase Option Policy Agreement</a> and return to your local rental facility.</p>
               </div>
@@ -430,6 +385,62 @@ master-slider: yes
             </ul>
         </div>
       </aside>
+    </div>
+  </div>
+</section>
+
+
+<section class="fluid-container bg-lt-gray margin-top-30">
+  <div class="container">
+    <div class="col-sm-4 padding-tb-30">
+      <h2 style="color: #9e6033; font-size:460%; letter-spacing:2px;">Available</h2>
+      <h2 style="color: #9e6033; font-size:910%; letter-spacing:2px; font-weight: 800; line-height:80%;">Now</h2>
+      <h2>in our regional rental fleets</h2>
+    </div>
+    <div class="col-sm-8" >
+      <div id="rentalsCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#rentalsCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="1"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="2"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="3"></li>
+          <li data-target="#rentalsCarousel" data-slide-to="4"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img src="/assets/img/for_rentals_abx-3l_01.jpg" alt="AutoBox ABX-3L">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_abx-pro_01.jpg" alt="AutoBox ABX-PRO">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_skr_01.jpg" alt="Striker surface prep">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_abx-500_01.jpg" alt="AutoBox ABX-500">
+          </div>
+
+          <div class="item">
+            <img src="/assets/img/for_rentals_bc_01.jpg" alt="Rotary tools for surface prep">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#rentalsCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#rentalsCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div><!-- end Carousel -->
     </div>
   </div>
 </section>
