--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -85,9 +85,14 @@ permalink: /patents
         <td>Rotary nozzle design</td>
       </tr>
       <tr>
+        <td>9950348</td>
+        <td>BTC-100, BTC-200</td>
+        <td>Boiler Tube Cleaner</td>
+      </tr>
+      <tr>
         <td>9,699,361</td>
-        <td>BTC-200, other</td>
-        <td>Camera skid tractor nozzle</td>
+        <td></td>
+        <td>Camera Skid and Tractor Nozzle Assembly</td>
       </tr>
       <tr>
         <td>6,085,994</td>
@@ -113,11 +118,6 @@ permalink: /patents
         <td>9,016,613</td>
         <td>Scorpion</td>
         <td>System for rotating and feeding high pressure hose</td>
-      </tr>
-      <tr>
-        <td>Pending</td>
-        <td>SPD</td>
-        <td>System for propelling coil clad hose</td>
       </tr>
       <tr>
         <td>9,067,220</td>
