start translations, misc updates

--- a/index.html
+++ b/index.html
@@ -410,6 +410,11 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-vp-finance">StoneAge Welcomes VP of Finance and IT</a></h4>
+        <p>StoneAge is pleased to welcome Peter Brooks as Vice President of Finance and Information Technology.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, May 2018</small></p>
+      </li>  
+      <li>
         <h4><a href="http://news.stoneagetools.com/hose-containment-updates">New Hose Containment Options for ABX-3L, ABX-2L, and ABX-PRO</a></h4>
         <p>StoneAge offers effective hose containment solutions for 3-lance, 2-lance, and 1-lance applications.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2018</small></p>
@@ -428,12 +433,7 @@ landing: yes
         <h4><a href="http://news.stoneagetools.com/cold-weather-operation-automated-equipment">Service Bulletin: Cold weather operation of Automated Equipment</a></h4>
         <p>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2018</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/whr-hybrid-switcher-case-study-pd">Case Study: WHR Hybrid Switcher</a></h4>
-        <p>The Warthog WHR Hybrid Switcher handles long distances, inclines, and excessive buildup.<br>
-        <small><i class="fa fa-file-text-o"></i> Case Study, February 2018</small></p>
-      </li>    
+      </li>  
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
