--- a/product-catalogs.html
+++ b/product-catalogs.html
@@ -155,7 +155,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 60-61:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR60-61.pdf" target="_blank">Yellow Jacket</a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR60-61.pdf" target="_blank">Yellow Jacket</a> <a href="/custom-solutions" style="color:#888;"><em>- Contact Custom Solutions if interested</em></a></td>
         </tr>
         <tr>
           <td>Page 62-63:</td>
@@ -167,7 +167,7 @@ master-slider: yes
         </tr>
         <tr>
           <td>Page 66-67:</td>
-          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR66-67.pdf" target="_blank">Blackhawk</a></td>
+          <td><a href="assets/pdf/catalogs/waterblast_2017/2017_stoneage_waterblast_catalog_LR66-67.pdf" target="_blank">Blackhawk</a> <a href="/custom-solutions" style="color:#888;"><em>- Contact Custom Solutions if interested</em></a></td>
         </tr>
         <tr>
           <td>Page 68-69:</td>
