--- a/purchase-options.html
+++ b/purchase-options.html
@@ -92,7 +92,8 @@ master-slider: yes
           <li>Try out newly released StoneAge equipment</li>
           <li><a href="https://www.stoneagetools.com/assets/pdf/reference/rental_purchase_option_policy.pdf" target="_blank">Rental costs can be applied toward new equipment purchase</a></li>
         </ul>
-        <a href="/rentals" class="btn btn-lg btn-block" role="button" style="margin-bottom:60px; margin-top:25px;">Rent equipment</a>
+        <a href="/rentals" class="btn btn-lg btn-block" role="button" style="margin-top:25px;">Rent equipment</a>        
+        <p style="margin-bottom:30px;"><em class="grey thin">(Available in North America, International options coming soon)</em></p>
       </div>
     </div>
 
