--- a/rentals.html
+++ b/rentals.html
@@ -43,9 +43,9 @@ master-slider: yes
       <div class="col-sm-4">
         <h5 class="bold slab" style="text-transform:uppercase;">Australia</h5>
         <p><strong>WOMA Australia</strong><br>
-          08 9434 6622 | Henderson, Perth, WA<br>
-          02 4648 2311 | Smeaton Grange, NSW<br>
-          07 5479 3112 | Queensland<br>
+          +61 08 9434 6622 | Henderson, Perth, WA<br>
+          +61 02 4648 2311 | Smeaton Grange, NSW<br>
+          +61 07 5479 3112 | Queensland<br>
         <a href="http://www.woma.com.au/" target="_blank">www.woma.com.au</a></p>
       </div>
       <div class="col-sm-4">
