--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -631,7 +631,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 HP LH &amp; RH, 9/16-18 HP LH &amp; RH, M14 LH</td>
+                      <td colspan="2">3/8 HP LH, 9/16-18 HP LH &amp; RH, M14 LH</td>
                     </tr>
                     <tr>
                       <th>Tool Diameter</th>
