--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -1141,6 +1141,7 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
+<!--
     <div class="mix boiler-cleaning" data-name="yellow-jacket" data-designation="automated">
       <a href="/yellow-jacket" class="search-text">
         <img src="/assets/img/product/yellow-jacket-02.jpg" class="img-responsive" />
@@ -1161,10 +1162,11 @@ permalink: /waterblast-tools-automated-equipment
         <button>View Details</button>
       </a>
     </div>
+-->
   </section>
   <!-- End Boiler Cleaning -->
   
-  <!-- Concrete -->
+  <!-- Concrete
   <div class="fluid-container section-heading margin-top-30">
     <div class="container">
       <h2 id="concrete">Concrete Hydrodemolition &amp; Scarification</h2>
@@ -1235,7 +1237,7 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
   </section>
-  <!-- End Concrete -->
+  End Concrete -->
   
   <!-- Tools -->
   <div class="fluid-container section-heading margin-top-30">
