add SC-125 vid and update SKRL manual

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -245,6 +245,9 @@
 </div>
 
 <!-- SpinCat -->
+<div id="sc-125-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/Nxffuus4ugs?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="sc-168-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/hQHbpRk-JEI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
