--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -80,7 +80,7 @@ master-slider: yes
               <li><a href="#section-bar-1"><span>Specifications</span></a></li>
               <li><a href="#section-bar-2"><span>Applications</span></a></li>
               <li><a href="#section-bar-3"><span>Manuals/Docs</span></a></li>
-              <!--<li><a href="#section-bar-3"><span>Videos</span></a></li>-->
+              <li><a href="#section-bar-3"><span>Videos</span></a></li>
               <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
             </ul>
         </nav>
@@ -218,20 +218,21 @@ master-slider: yes
             </aside>
           </section>
 
-          <!-- Videos 
+          <!-- Videos -->
           <section id="section-bar-3">
             <div class="row row-centered">
               <div class="col-sm-4 col-centered">
-                <!-- Lightbox call 
-                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sc-168-vid">
-                    <img src="/assets/vid/thumb/sc-168-vid.png" alt="SpinCat SC-168 Maintenance video" class="img-responsive" />
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sc-125-vid">
+                    <img src="/assets/vid/thumb/sc-125-vid.jpg" alt="SpinCat SC-125 Maintenance video" class="img-responsive" />
                   </a>
                 </div>
-                <!-- End Lightbox call 
-                <p class="caption">SpinCat SC-168 Maintenance</p>
+                <!-- End Lightbox call -->
+                <p class="caption">SpinCat SC-125 Maintenance</p>
               </div>
             </div>
-          </section>-->
+          </section>
           
           <!-- Kits -->
           <section id="section-bar-4">
