--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@ landing: yes
 <!-- masterslider -->
 <div class="master-slider ms-skin-default" id="homeslider">
   
-  <!-- new slide -->
+  <!-- new slide 
   <div class="ms-slide">
     <img src="/assets/img/features/bg_green.jpg" data-src="/assets/img/features/bg_green.jpg" alt="StoneAge waterblast tools background"/>  
 
-<!--
     <div class="ms-layer feature-h1" style="" 
       data-effect="t(true,n,-60,n,n,n,n,n,n,n,n,n,n,n,n)" 
       data-duration="2200" 
@@ -26,7 +25,6 @@ landing: yes
       data-origin="ml" 
       data-position="normal">Visit Booth #5124
     </div>
--->
 
     <div class="ms-layer" style="width:280px;"
       data-effect="t(true,n,40,n,n,n,n,n,n,n,n,n,n,n,n)" 
@@ -64,7 +62,6 @@ landing: yes
        data-position="normal">More Info
     </a>
 
-<!--
     <img  class="ms-layer" src="/assets/img/features/holidays-2017.png" 
          data-src="/assets/img/features/holidays-2017.png" alt="" style=""  
          data-effect="t(true,n,n,n,n,n,n,n,n,n,n,n,n,n,n)"   
@@ -75,7 +72,6 @@ landing: yes
          data-offset-y="-35" 
          data-origin="mr" 
          data-position="normal" />
--->
 
   <img class="ms-layer" src="/assets/img/features/home-ifat-2018.png" 
        data-src="/assets/img/features/home-ifat-2018.png" alt="Visit StoneAge at IFAT 2018" style=""  
@@ -90,7 +86,7 @@ landing: yes
      />
 
 
-  </div> <!-- end of slide -->
+  </div>  end of slide -->
   
   <!-- new slide -->
   <div class="ms-slide">
@@ -384,6 +380,7 @@ landing: yes
       <h2>Events</h2>
     </div>
     
+<!--
     <div class="row" style="margin-top:15px;">
       <a href="https://www.ifat.de/index-2.html" target="_blank"><img src="/assets/img/thumb/upcoming_events_ifat_2018.jpg" class="img-responsive"/ alt="Visit StoneAge at IFAT 2018"></a>
       <div class="caption text-center">
@@ -391,6 +388,7 @@ landing: yes
           <span class="small">The World's Leading Trade Fair for Water, Sewage, Waste and Raw Materials Management<br><strong>May 14-18, 2018<br>Messe München<br>Munich, Germany</strong><br>Booth C4.311/410</span></h4>
       </div>
     </div>
+-->
     
     <div class="row" style="padding-top:25px;">
       <a href="http://www.fuelethanolworkshop.com/ema/DisplayPage.aspx?pageId=Home" target="_blank"><img src="/assets/img/thumb/upcoming_events_FEW_2018.jpg" class="img-responsive"/ alt="Visit StoneAge at FEW 2018"></a>
