--- a/sewer-tools-nozzles/warthog-wgr-switcher.html
+++ b/sewer-tools-nozzles/warthog-wgr-switcher.html
@@ -165,7 +165,8 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/WGR-SWT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Switcher Manual</a></li>
+                <li><a href="/assets/pdf/manuals/WGR_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Manual</a></li>
+                <li><a href="/assets/pdf/manuals/WGR-SWT_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Warthog WGR Switcher Head Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
