--- a/loc-houston.html
+++ b/loc-houston.html
@@ -77,6 +77,12 @@ contact-houston: yes
         </div>
         <div class="row">
           <div class="col-sm-6">
+            <p><strong>Brian King</strong>
+            <br/>Automation Technician<br/>
+              Main: +1 (281) 888-5069<br/>
+              <a href="mailto:brian.king@stoneagetools.com">brian.king@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
             <p><strong>Mike Rimmell</strong><br/>
               Rental, Repair and Automation (RRA) Technician<br/>
               Main: +1 (281) 888-5069<br/>
