--- a/loc-la.html
+++ b/loc-la.html
@@ -68,10 +68,11 @@ contact-la: yes
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>John Graham</strong><br/>
+            <p><strong>Bradley Coble</strong><br/>
               Southeast/Northeast Regional Sales Manager<br/>
-              Main: +1 (225) 264-4935
-            <a href="mailto:John.Graham@stoneagetools.com">john.graham@stoneagetools.com</a></p>
+              Office: +1 (225) 508-3520<br/>
+              Direct: +1 (409) 239-9165<br/>
+            <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a></p>
           </div>
         </div>
 
